--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 :root{
     --primary-color: #3056bf;
+    --secondary-color:#001a4b93; 
 }
 
 
 body{
     margin: 0;
     padding: 0;
-    background: url(https://i.pinimg.com/originals/7e/92/c4/7e92c4705aa62eab12558c755e7d3699.jpg);
+    background: url(https://i.pinimg.com/originals/7e/92/c4/7e92c4705aa62eab12558c755e7d3699.jpg) center;
     box-sizing: border-box;
+    background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -18,7 +20,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: #001a4b93;
+    background: var(--secondary-color);
     color: #fff;
 }
 
@@ -95,7 +97,7 @@ header .login-sec ul li a{
 .sidebar{
     margin-top: 85px;
     position: fixed;
-    background: #001a4b93;
+    background: var(--secondary-color);
     height: 100vh;
 }
 
@@ -134,10 +136,9 @@ header .login-sec ul li a{
 
  .chatbox{
     position: fixed;
-    background:#3056bf ;
+    background:#00081fb7 ;
     margin-left: 78%;
     margin-top: 100px;
-    border: 2px solid #f4f4f4;
 }
 
 .chatbox .chat-head{
@@ -173,10 +174,18 @@ header .login-sec ul li a{
     padding: 8px;
     border: none;
     border-radius: 50%;
+    background: rgb(4, 156, 110);
 }
 
+.chatbox .chat-type button i{
+    color: #fff;    
+}
+
+
 .chatbox .notification{
-    background: #fff;
+    background: rgb(43, 43, 43);
+    color: #fff;
+
 }
 
 .notification .noti-content{
@@ -185,47 +194,68 @@ header .login-sec ul li a{
 
 /* reviews middle content */
 
-.reviews{
+/* FOOTER */
+
+.footer{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    padding: 20px;
+    width: 100%;
+    background: var(--secondary-color);
+}
+
+.footer .sec1{
+   padding-right: 20px;
+   color: #fff;
+}
+
+.footer .sec1 h1{
+    font-size: 30px;
+    font-family: 'Satisfy', cursive;}
+
+.footer .sec1 p{
+    font-size: 15px;
+    font-weight: 100;
+}
+
+.footer .sec2{
+    color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+    padding-left: 30px;
 }
 
-.reviews h1{
-     color: #fff;
-     font-size: 40px;
+.footer .sec2  li{
+    list-style: none;
 }
 
-.rev-box{
-    display: flex;
+.footer .sec2 h1{
+    font-size: 30px;
 }
 
-.rev1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 10px;
-    padding: 10px;
-    background: #f4f4f4;
-    border-radius: 10px;
+.footer .sec2  li a{
+    color: #fff;
+    text-decoration: none;
 }
 
-.rev1 img{
-    border-radius: 50%;
+.footer .sec3{
+    color: #fff;
+    margin-right: 30px;
 }
 
-.rev1 .rating{
-    color: gold;
+.footer .sec4{
+    padding-top: 80px;
 }
 
-.rev1 .rating p{
-    color: #000;
+.footer .sec4 img{
+    border: 1px solid #fff;
 }
 
-.rev1 h1{
-    font-size: 20px;
-    font-weight: bold;
+.footer .sec4 .grid-img img{
+    width: 50px;
+    z-index: 1;
+}
+
+.footer .sec4 .grid-img img:hover{
+    width: 400px;
 }
